# voxgrep

./: .gitignore  CLAUDE.md  GEMINI.md  INSTALLATION_STATUS.md  README.md  TODO.md  anticomuna.json  auto_videogrep.py  benchmark_accuracy.py  download_script.py  installvoxgrep.ps1  pyproject.toml  repro_download.py  supercut.json  test_exact_match.py  test_mash_mode.py  test_ngram_filter.py  test_search_logic.py  tox.ini  yt_download00001.en.vtt  yt_download00001.pt.vtt
.agent/: AUDIO_NORMALIZATION.md  HIGH_ACCURACY_MODE.md  INTERACTIVE_FLOW.md  INTERACTIVE_LOOP_FIX.md  MODEL_METADATA_TRACKING.md  TRANSCRIPTION_CANCELLATION.md  TRANSCRIPTION_ENHANCEMENTS.md  enhancements_summary.md
.agent/artifacts/: CLI_REFACTORING.md  MIGRATION_GUIDE.md  REFACTORING_CHECKLIST.md
.agent/skills/ai-search-visibility/: SKILL.md
.agent/skills/code-maintenance/: SKILL.md
desktop/: desktop_api.py  package-lock.json  package.json
desktop/src/: App.tsx  api.ts  index.css  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs
desktop/src/components/: Header.tsx  InputSource.tsx  Library.tsx  SearchDashboard.tsx
desktop/src/hooks/: useSearch.ts
docs/: API_REFERENCE.md  ARCHITECTURE.md  BATCH_ERROR_RECOVERY.md  CLI_REFERENCE.md  EXAMPLES.md  GETTING_STARTED.md  USER_GUIDE.md  index.html
downloads/: FC PORTO VLOG 👀🐉 A vitória no Clássico.json
examples/: auto_youtube.py  benchmark_mlx.py  demo_metadata_tracking.py  parts_of_speech.py
tests/: reproduce_all_features.py  test_batch_error_recovery.py  test_cancellation.py  test_cli_interactive.py  test_doctor.py  test_exporter.py  test_interactive_loop.py  test_metadata.py  test_search.py  test_search_semantic.py  test_ticker.py  test_transcribe.py  test_videogrep.py  test_youtube.py
videogrep/: __init__.py  cli.py  search_engine.py  transcribe.py  videogrep.py
videogrep/modules/: youtube.py
voxgrep/: __init__.py  __main__.py  cli.py  prefs.py  search_engine.py  transcribe.py  voxgrep.py
voxgrep/cli/: __init__.py  commands.py  doctor.py  interactive.py  main.py  ngrams.py  ui.py  wizard.py  workflows.py
voxgrep/core/: __init__.py  engine.py  exporter.py  logic.py  stream_handler.py  subtitle_utils.py  transcriber.py  types.py  word_timestamps.py
voxgrep/formats/: __init__.py  fcpxml.py  sphinx.py  vtt.py
voxgrep/modules/: youtube.py
voxgrep/server/: __init__.py  app.py  db.py  dependencies.py  diarization.py  models.py  multi_model.py  subtitles.py  transitions.py  vector_store.py
voxgrep/server/routers/: __init__.py  export.py  index.py  ingest.py  library.py  media.py  search.py  speaker.py  system.py
voxgrep/utils/: __init__.py  audio.py  config.py  exceptions.py  helpers.py  mpv_utils.py  prefs.py
