[tool.poetry]
name = "videogrep"
version = "2.3.1"
description = "Videogrep is a command line tool that searches through dialog in video and audio files and makes supercuts based on what it finds. Like grep but for video."
authors = ["virtuadex <subs.greedy988@simplelogin.fr>"]
readme = "README.md"
homepage = "soon"
keywords = ["video", "supercut"]
classifiers = [
  "Topic :: Multimedia :: Video",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Text Processing",
  "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.12.3"
moviepy = "^1.0.3"
imageio-ffmpeg = "*"
yt-dlp = "*"
vosk = {version = ">=0.3.32", optional = true}
openai-whisper = {version = "*", optional = true}
spacy = {version = "*", optional = true}

[tool.poetry.extras]
full = ["vosk", "openai-whisper", "spacy"]
vosk = ["vosk"]
whisper = ["openai-whisper"]
nlp = ["spacy"]

[tool.poetry.dev-dependencies]
tox = "^3.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
videogrep = "videogrep.cli:main"
