[tool.poetry]
name = "videogrep"
version = "2.3.1"
description = "Videogrep is a command line tool that searches through dialog in video and audio files and makes supercuts based on what it finds. Like grep but for video."
authors = ["virtuadex <subs.greedy988@simplelogin.fr>"]
readme = "README.md"
homepage = "https://x.com/dexteroliveira"
keywords = ["video", "supercut"]
classifiers = [
  "Topic :: Multimedia :: Video",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Text Processing",
  "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
beautifulsoup4 = "^4.12.3"
moviepy = "^2.0.0" 
imageio-ffmpeg = "*"
yt-dlp = "*"
spacy = {version = "^3.8.0", optional = true}
faster-whisper = "^1.2.1"

[tool.poetry.extras]
full = ["pywhispercpp", "spacy"]
whisper = ["pywhispercpp"]
nlp = ["spacy"]

[tool.poetry.group.dev.dependencies]
tox = "^4.0.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
videogrep = "videogrep.cli:main"
